objects/Impact_Assessment__c.object
<CustomObject>
    <fields>
        <fullName>Assignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assignee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Impact_Assessments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Change_Control__c</fullName>
        <label>Change Control</label>
        <referenceTo>CMPL123QMS__Change_Control__c</referenceTo>
        <relationshipLabel>Impact Assessments</relationshipLabel>
        <relationshipName>Impact_Assessments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Other_SME_Area__c</fullName>
        <label>Other - SME Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SME_Area__c</fullName>
        <label>SME Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Facilities</fullName>
                </value>
                <value>
                    <fullName>HSE</fullName>
                </value>
                <value>
                    <fullName>Industrialization</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Logistics</fullName>
                </value>
                <value>
                    <fullName>Maintenance and Reliability</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>PL&amp;D</fullName>
                </value>
                <value>
                    <fullName>Quality Assurance</fullName>
                </value>
                <value>
                    <fullName>QA Validation</fullName>
                </value>
                <value>
                    <fullName>Quality Control</fullName>
                </value>
                <value>
                    <fullName>QMS</fullName>
                </value>
                <value>
                    <fullName>Regulatory</fullName>
                </value>
                <value>
                    <fullName>Risk Analysis/Assessment</fullName>
                </value>
                <value>
                    <fullName>R&amp;D</fullName>
                </value>
                <value>
                    <fullName>Statistical Assessment</fullName>
                </value>
                <value>
                    <fullName>Supplier QA</fullName>
                </value>
                <value>
                    <fullName>Supply Chain</fullName>
                </value>
                <value>
                    <fullName>System Assessment (per 008714)</fullName>
                </value>
                <value>
                    <fullName>Training Operations</fullName>
                </value>
                <value>
                    <fullName>Validation</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Other with mandatory free text field to document area for assessment</fullName>
                    <isActive>false</isActive>
                    <label>Other with mandatory free text field to document area for assessment</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123Rule_Key_Value__c</fullName>
        <label>Rule Field Update Key Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Action_Performed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Workflow Action Performed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Impact_AssessmentcCMPL123_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Action_Performed_On__c</fullName>
        <label>Workflow Action Performed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Action__c</fullName>
        <label>Workflow Action</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Status__c</fullName>
        <label>Workflow Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Action__c</fullName>
        <label>Implementation Action</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>impact_Assessment__c</fullName>
        <label>Impact Assessment</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123Task_Key_Value__c</fullName>
        <label>Task Field Update Key Value</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Performed_By_Automation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Performed By Automation</label>
        <type>Checkbox</type>
    </fields>
    <label>Impact Assessment</label>
    <nameField>
        <displayFormat>CC-IA-{0000}</displayFormat>
        <label>Impact Assessment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Impact Assessments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <validationRules>
        <fullName>Other_SME_Area</fullName>
        <active>true</active>
        <description>If Other is selected in SME Area, then Other - SME Area must be populated.</description>
        <errorConditionFormula>AND(
ISPICKVAL(SME_Area__c, "Other"),
ISBLANK( Other_SME_Area__c )
)</errorConditionFormula>
        <errorDisplayField>Other_SME_Area__c</errorDisplayField>
        <errorMessage>If Other is selected in SME Area, then Other - SME Area must be populated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>QA_assessment_if_created_must_be_last</fullName>
        <active>true</active>
        <description>Quality Assurance assessment (if created) must be completed last</description>
        <errorConditionFormula>ISCHANGED( CMPL123_WF_Action__c ) &amp;&amp; 
CMPL123_WF_Action__c =="Assessment Completed" &amp;&amp; 
(ISPICKVAL(SME_Area__c, "Quality Assurance") &amp;&amp;

( Change_Control__r.Closed_Impact_Assessments__c   &lt;&gt;   Change_Control__r.Total_Impact_Assessments_with_type_quali__c ))</errorConditionFormula>
        <errorMessage>Quality Assurance assessment must be completed last</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Assignee_restrictions</fullName>
        <active>true</active>
        <description>Only the Change Owner of the Change Control or Change Coordinator can modify the Assignee field</description>
        <errorConditionFormula>(PRIORVALUE(Assignee__c) != null &amp;&amp; Change_Control__r.Change_Owner__c  &lt;&gt;  $User.Id &amp;&amp; ISCHANGED( Assignee__c ))
&amp;&amp;
( PRIORVALUE(Assignee__c) != null &amp;&amp; PRIORVALUE(Assignee__c) &lt;&gt; $User.Id &amp;&amp; ISCHANGED( Assignee__c ))
&amp;&amp;
( PRIORVALUE(Assignee__c) != null &amp;&amp;   (!Includes($User.TWD_Role__c, 'Change Coordinator') &amp;&amp; ISCHANGED( Assignee__c )))</errorConditionFormula>
        <errorMessage>Only the Assignee, Change Owner of the Change Control, or Change Coordinator can modify the Assignee field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CC_is_in_Pending_CRB_lock_child_records</fullName>
        <active>true</active>
        <description>All Child Records are locked when the Change Control is in the status of Pending CRB Team Review</description>
        <errorConditionFormula>Change_Control__r.CMPL123_WF_Status__c  = 'Pending CRB Team Review'</errorConditionFormula>
        <errorMessage>All Child Records are locked when the Change Control is in the status of Pending CRB Team Review</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lock_when_CC_is_in_Pending_Quality_Revie</fullName>
        <active>true</active>
        <description>All Child Records are locked when the Change Control is in the status of Pending Quality Review</description>
        <errorConditionFormula>Change_Control__r.CMPL123_WF_Status__c == "Pending Quality Review" &amp;&amp; NOT(Performed_By_Automation__c)</errorConditionFormula>
        <errorMessage>All Child Records are locked when the Change Control is in the status of Pending Quality Review</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Only_Change_Owner_or_Change_Coordinator</fullName>
        <active>false</active>
        <description>Only Change Owner or Change Coordinator can modify fields in the initiation, impact assessment, and implementation plan sections after CRB Approval and the WF was sent back to Open</description>
        <errorConditionFormula>(!Includes($User.TWD_Role__c, 'Change Coordinator') &amp;&amp;  $User.Id !=  Change_Control__r.Change_Owner__c  ) &amp;&amp;  Change_Control__r.Only_Change_Owner_or_Change_Coordinator__c</errorConditionFormula>
        <errorMessage>Only Change Owner or Change Coordinator can modify fields in the initiation, impact assessment, and implementation plan sections after CRB Approval and the WF was sent back to Open</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Impact_Assessments_only_in_cc_open</fullName>
        <active>true</active>
        <description>Impact Assessments can only be created when Change Control is in the Open status</description>
        <errorConditionFormula>AND (
ISNEW(),
Change_Control__r.CMPL123_WF_Status__c   &lt;&gt;  'Open'
)</errorConditionFormula>
        <errorMessage>Impact Assessments can only be created when Change Control is in the Open status</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_more_impact_assessments_after_quality</fullName>
        <active>true</active>
        <description>You cannot add an addtional Impact Assessment after the Quality Assurance Assessment was completed</description>
        <errorConditionFormula>AND (
ISNEW(),
 Change_Control__r.Total_Quality_Assessments_done__c  &gt; 0
)</errorConditionFormula>
        <errorMessage>You cannot add an addtional Impact Assessment after the Quality Assurance Assessment was completed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Impact_Assessme_after_CC_is_reviewed</fullName>
        <active>true</active>
        <description>Impact Assessments can only be created when Change Control is in the Open status</description>
        <errorConditionFormula>AND (
ISNEW(),
Change_Control__r.CMPL123_WF_Status__c &lt;&gt; 'Open'
)</errorConditionFormula>
        <errorMessage>Impact Assessments can only be created when Change Control is in the Open status</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Impact_Assessment_Restriction</fullName>
        <active>true</active>
        <description>Only the Assignee can modify the Impact Assessment field</description>
        <errorConditionFormula>Assignee__c &lt;&gt; $User.Id &amp;&amp; 
( ISCHANGED( impact_Assessment__c ) ||
(ISNEW() &amp;&amp; !ISBlANK( impact_Assessment__c )))</errorConditionFormula>
        <errorDisplayField>impact_Assessment__c</errorDisplayField>
        <errorMessage>Only the Assignee can modify the Impact Assessment field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Implementation_Action_Restriction</fullName>
        <active>true</active>
        <description>Only the Assignee can modify the Implementation Action field</description>
        <errorConditionFormula>Assignee__c &lt;&gt; $User.Id &amp;&amp; 
( ISCHANGED(Implementation_Action__c) ||
(ISNEW() &amp;&amp; !ISBlANK(Implementation_Action__c)))</errorConditionFormula>
        <errorDisplayField>Implementation_Action__c</errorDisplayField>
        <errorMessage>Only the Assignee can modify the Implementation Action field</errorMessage>
    </validationRules>
</CustomObject>